# SciCalc

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: expr_stack.c  expr_stack.h  main.c  shell.c  shell.h  strings.h  util.c  util.h
src/tests/: expr_stack_test.c  tests.c
